:lipstick: :hammer: issue #14

--- a/nx-workspace/apps/seo-splash/src/index.html
+++ b/nx-workspace/apps/seo-splash/src/index.html
@@ -31,7 +31,10 @@
     <main>
       <div class="mdc-elevation--z5">
         <h1>Songhay Studio Seo Splash</h1>
-        <div class="lds-ripple"><div></div><div></div></div>
+        <div class="lds-ripple">
+          <div></div>
+          <div></div>
+        </div>
       </div>
     </main>
     <nx-workspace-root></nx-workspace-root>
