--- a/nx-workspace/apps/seo-splash/src/index.html
+++ b/nx-workspace/apps/seo-splash/src/index.html
@@ -23,14 +23,15 @@
     -->
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
 
   </head>
 
-  <body>
+  <body class="mdc-typography">
     <main>
       <div class="mdc-elevation--z5">
-        <h1>Songhay Studio Seo Splash</h1>
+        <h1 class="mdc-typography--headline1">Songhay Studio Seo Splash</h1>
         <div class="lds-ripple">
           <div></div>
           <div></div>
